--- a/src/areas/admin/dashboard/dashboard.component.scss
+++ b/src/areas/admin/dashboard/dashboard.component.scss
@@ -32,7 +32,7 @@
       font-size: var(--font-size-3xl);
       width: 32px;
       height: 32px;
-      color: white;
+      color: var(--color-white);
     }
   }
 
